; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_mptable_pci.c_mptable_hostb_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_mptable_pci.c_mptable_hostb_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENXIO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"MPTable Host-PCI bridge\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @mptable_hostb_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mptable_hostb_probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = call i64 (...) @pci_cfgregopen()
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @ENXIO, align 4
  store i32 %7, i32* %2, align 4
  br label %18

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @pcib_get_bus(i32 %9)
  %11 = call i64 @mptable_pci_probe_table(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %8
  %14 = load i32, i32* @ENXIO, align 4
  store i32 %14, i32* %2, align 4
  br label %18

15:                                               ; preds = %8
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @device_set_desc(i32 %16, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %15, %13, %6
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i64 @pci_cfgregopen(...) #1

declare dso_local i64 @mptable_pci_probe_table(i32) #1

declare dso_local i32 @pcib_get_bus(i32) #1

declare dso_local i32 @device_set_desc(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
